# astro-web

./: .gitignore  Home.py  README.md  packages.txt  pyproject.toml  requirements.txt  umda_web.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
archives/: current_pkgs_version.txt
pages/: 01_UMDA.py  01_🤖_UMDA.py  02_Astromol.py  02_🚀_Astromol.py  03_⚗️_UCLCHEM.py
pages/UCLCHEM/: parameters.py
src/astro_web/: Home.py  __init__.py
